--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
 								<i class="fs-4 bi bi-telephone-fill align-content-center me-4"></i>
 								<p class="text-light mb-0">
 									Contact Us
-									<span class="d-block">03-8062 5093</span>
+									<span class="d-block">+603-8062 5093</span>
 								</p>
 							</div>
 						</li>
