--- a/contact.html
+++ b/contact.html
@@ -194,7 +194,7 @@
 					<div class="cda-single-content hr d-flex">
 						<div class="cda-content-inner">
 							<h4>Telephone Number</h4>
-							<p>03-8062 5093 </p>
+							<p>+603-8062 5093 </p>
 						</div>
 					</div>
 					<div class="cda-single-content hr d-flex">
@@ -300,7 +300,7 @@
 					    <div class="footer-widget-contact">
 							<ul>
 								<li><a href="#">sales@trimaxcentury.com.my</a></li>
-								<li><a href="#">03-8062 5093</a></li>
+								<li><a href="#">+603-8062 5093</a></li>
 								<li><a href="#">No. 24, Jalan Utama 2/32, 47100 Puchong, Selangor Darul Ehsan, Malaysia Taman Perindustrian Puchong Utama</a></li>
 							</ul>
 						</div>
