--- a/products.html
+++ b/products.html
@@ -49,7 +49,7 @@
 								<i class="fs-4 bi bi-telephone-fill align-content-center me-4"></i>
 								<p class="text-light mb-0">
 									Contact Us
-									<span class="d-block">03-8062 5093</span>
+									<span class="d-block">+603-8062 5093</span>
 								</p>
 							</div>
 						</li>
@@ -328,7 +328,7 @@
 					    <div class="footer-widget-contact">
 							<ul>
 								<li><a href="#">sales@trimaxcentury.com.my</a></li>
-								<li><a href="#">03-8062 5093</a></li>
+								<li><a href="#">+603-8062 5093</a></li>
 								<li><a href="#">No. 24, Jalan Utama 2/32, 47100 Puchong, Selangor Darul Ehsan, Malaysia Taman Perindustrian Puchong Utama</a></li>
 							</ul>
 						</div>
