--- a/products.html
+++ b/products.html
@@ -147,9 +147,8 @@
 						<img src="assets/images/resource/project1.jpg" alt="">
 					</div>
 					<div class="product-content">
-						<a href="#">Parametric modeling</a>
-						<p>Facilisis at vero eros et accu qui blandit praesent luptatum zril 
-                        augue duis autem vel eum iriure dolor in hendrerit.</p>
+						<a href="#">N1 ~ N5 Series</a>
+						<p>Portable</p>
                         <a class="product-button" href="#">View Product</a>
 					</div>
 				</div>
@@ -160,9 +159,8 @@
 						<img src="assets/images/resource/project2.jpg" alt="">
 					</div>
 					<div class="product-content">
-						<a href="#">Conustraction modeling</a>
-						<p>Facilisis at vero eros et accu qui blandit praesent luptatum zril 
-                        augue duis autem vel eum iriure dolor in hendrerit.</p>
+						<a href="#">NP</a>
+						<p>Heavy Duty</p>
                         <a class="product-button" href="#">View Product</a>
 					</div>
 				</div>
@@ -173,9 +171,8 @@
 						<img src="assets/images/resource/project3.jpg" alt="">
 					</div>
 					<div class="product-content">
-						<a href="#">Building solutions</a>
-						<p>Facilisis at vero eros et accu qui blandit praesent luptatum zril 
-                        augue duis autem vel eum iriure dolor in hendrerit.</p>
+						<a href="#">N5SE</a>
+						<p>Side Entry</p>
                         <a class="product-button" href="#">View Product</a>
 					</div>
 				</div>
@@ -186,9 +183,8 @@
 						<img src="assets/images/resource/project3.jpg" alt="">
 					</div>
 					<div class="product-content">
-						<a href="#">Building solutions</a>
-						<p>Facilisis at vero eros et accu qui blandit praesent luptatum zril 
-                        augue duis autem vel eum iriure dolor in hendrerit.</p>
+						<a href="#">Static</a>
+						<p></p>
                         <a class="product-button" href="#">View Product</a>
 					</div>
 				</div>
