--- a/products.html
+++ b/products.html
@@ -147,32 +147,8 @@
 						<img src="assets/images/resource/project1.jpg" alt="">
 					</div>
 					<div class="product-content">
-						<a href="#">N1 ~ N5 Series</a>
+						<a href="#">Neutrone® N1 ~ N5 Series</a>
 						<p>Portable</p>
-                        <a class="product-button" href="#">View Product</a>
-					</div>
-				</div>
-			</div>				
-			<div class="col-lg-4 grid-item pump">
-				<div class="single-product-box">
-					<div class="product-thumb">
-						<img src="assets/images/resource/project2.jpg" alt="">
-					</div>
-					<div class="product-content">
-						<a href="#">NP</a>
-						<p>Heavy Duty</p>
-                        <a class="product-button" href="#">View Product</a>
-					</div>
-				</div>
-			</div>				
-			<div class="col-lg-4 grid-item pump">
-				<div class="single-product-box">
-					<div class="product-thumb">
-						<img src="assets/images/resource/project3.jpg" alt="">
-					</div>
-					<div class="product-content">
-						<a href="#">N5SE</a>
-						<p>Side Entry</p>
                         <a class="product-button" href="#">View Product</a>
 					</div>
 				</div>
@@ -183,8 +159,56 @@
 						<img src="assets/images/resource/project3.jpg" alt="">
 					</div>
 					<div class="product-content">
-						<a href="#">Static</a>
-						<p></p>
+						<a href="#">Neutrone® N5BE</a>
+						<p>Side Entry</p>
+                        <a class="product-button" href="#">View Product</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 grid-item pump">
+				<div class="single-product-box">
+					<div class="product-thumb">
+						<img src="assets/images/resource/project3.jpg" alt="">
+					</div>
+					<div class="product-content">
+						<a href="#">Neutrone® N5SE</a>
+						<p>Side Entry</p>
+                        <a class="product-button" href="#">View Product</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 grid-item pump">NMS-NMSR
+				<div class="single-product-box">
+					<div class="product-thumb">
+						<img src="assets/images/resource/project3.jpg" alt="">
+					</div>
+					<div class="product-content">
+						<a href="#">Neutrone® NHSM</a>
+						<p>Side Entry</p>
+                        <a class="product-button" href="#">View Product</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 grid-item pump">
+				<div class="single-product-box">
+					<div class="product-thumb">
+						<img src="assets/images/resource/project3.jpg" alt="">
+					</div>
+					<div class="product-content">
+						<a href="#">Neutrone® NMS-NMSR</a>
+						<p>Side Entry</p>
+                        <a class="product-button" href="#">View Product</a>
+					</div>
+				</div>
+			</div>	
+			<div class="col-lg-4 grid-item pump">
+				<div class="single-product-box">
+					<div class="product-thumb">
+						<img src="assets/images/resource/project2.jpg" alt="">
+					</div>
+					<div class="product-content">
+						<a href="#">Neutrone® NP</a>
+						<p>Heavy Duty</p>
                         <a class="product-button" href="#">View Product</a>
 					</div>
 				</div>
