--- a/products.html
+++ b/products.html
@@ -177,7 +177,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-4 grid-item pump">NMS-NMSR
+			<div class="col-lg-4 grid-item pump">
 				<div class="single-product-box">
 					<div class="product-thumb">
 						<img src="assets/images/resource/project3.jpg" alt="">
