--- a/products.html
+++ b/products.html
@@ -144,7 +144,7 @@
 			<div class="col-lg-4 grid-item pump">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/resource/product1.jpg" alt="">
+						<img src="assets/images/resource/product1.png" alt="">
 					</div>
 					<div class="product-content">
 						<a href="#">Neutrone® N1 ~ N5 Series</a>
@@ -156,7 +156,7 @@
 			<div class="col-lg-4 grid-item pump">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/resource/product2.jpg" alt="">
+						<img src="assets/images/resource/product2.png" alt="">
 					</div>
 					<div class="product-content">
 						<a href="#">Neutrone® N5BE</a>
@@ -168,7 +168,7 @@
 			<div class="col-lg-4 grid-item pump">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/resource/product3.jpg" alt="">
+						<img src="assets/images/resource/product3.png" alt="">
 					</div>
 					<div class="product-content">
 						<a href="#">Neutrone® N5SE</a>
@@ -180,7 +180,7 @@
 			<div class="col-lg-4 grid-item pump">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/resource/product4.jpg" alt="">
+						<img src="assets/images/resource/product4.png" alt="">
 					</div>
 					<div class="product-content">
 						<a href="#">Neutrone® NHSM</a>
@@ -192,7 +192,7 @@
 			<div class="col-lg-4 grid-item pump">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/resource/product5.jpg" alt="">
+						<img src="assets/images/resource/product5.png" alt="">
 					</div>
 					<div class="product-content">
 						<a href="#">Neutrone® NMS-NMSR</a>
@@ -204,7 +204,7 @@
 			<div class="col-lg-4 grid-item pump">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/resource/product6.jpg" alt="">
+						<img src="assets/images/resource/product6.png" alt="">
 					</div>
 					<div class="product-content">
 						<a href="#">Neutrone® NP</a>
