--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<li>
 							<div class="d-inline-flex">
 								<i class="fs-4 bi bi-telephone-fill align-content-center me-4"></i>
-								<p class="text-light mb-0">
+								<p class="mb-0">
 									Contact Us
 									<span class="d-block">+603-8062 5093</span>
 								</p>
