--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 								<i class="fs-4 bi bi-telephone-fill align-content-center me-4"></i>
 								<p class="mb-0 text-light">
 									Contact Us
-									<span class="d-block text-dark">+603-8062 5093</span>
+									<span class="d-block fw-bold text-dark">+603-8062 5093</span>
 								</p>
 							</div>
 						</li>
