--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 			<div class="col-lg-9 col-md-6">
 				<div class="section-title">
 					<h1>Our Story</h1>
-					<p class="section-text">Specialize in Fluid Agitation</p>
+					<p class="section-text">Regional organization recognized for its expertise in the design, manufacture, and customization of fluid agitation equipment and systems.</p>
 				</div>
 			</div>
 			<div class="em-bar"></div> 
@@ -164,7 +164,7 @@
 		<div class="row">
 			<div class="col-lg-6">
 				<div class="about-item">
-					<p class="about-desc">Regional organization recognized for its expertise in the design, manufacture, and customization of fluid agitation equipment and systems. With over two decades of experience, we specialize in providing innovative solutions tailored to meet the unique needs of our clients across various industries.</p>
+					<p class="about-desc">With over two decades of experience, we specialize in providing innovative solutions tailored to meet the unique needs of our clients across various industries.</p>
 
 					<p>Established a strong presence in major industry segments, delivering customized fluid agitation solutions that meet the diverse needs of our clients globally.
 					</p>
