--- a/products.html
+++ b/products.html
@@ -128,7 +128,7 @@
 					<h1>Our Products</h1>
 				</div>
 			</div>
-			<div class="col-lg-6 col-md-12">
+			<div class="col-lg-6 col-md-12 d-none">
 				<div class="portfolio_nav">
 					<div class="portfolio_menu">
 						<ul class="menu-filtering">
@@ -147,7 +147,7 @@
 						<img src="assets/images/resource/product1.png" alt="">
 					</div>
 					<div class="product-content">
-						<a href="#">Neutrone® N1 ~ N5 Series</a>
+						<a href="#">Neutrone® Mixers</a>
 						<p>Portable</p>
                         <a class="product-button" href="#">View Product</a>
 					</div>
@@ -159,56 +159,8 @@
 						<img src="assets/images/resource/product2.png" alt="">
 					</div>
 					<div class="product-content">
-						<a href="#">Neutrone® N5BE</a>
+						<a href="#">Neutrone® Pumps</a>
 						<p>Side Entry</p>
-                        <a class="product-button" href="#">View Product</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 grid-item pump">
-				<div class="single-product-box">
-					<div class="product-thumb">
-						<img src="assets/images/resource/product3.png" alt="">
-					</div>
-					<div class="product-content">
-						<a href="#">Neutrone® N5SE</a>
-						<p>Side Entry</p>
-                        <a class="product-button" href="#">View Product</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 grid-item pump">
-				<div class="single-product-box">
-					<div class="product-thumb">
-						<img src="assets/images/resource/product4.png" alt="">
-					</div>
-					<div class="product-content">
-						<a href="#">Neutrone® NHSM</a>
-						<p>Side Entry</p>
-                        <a class="product-button" href="#">View Product</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 grid-item pump">
-				<div class="single-product-box">
-					<div class="product-thumb">
-						<img src="assets/images/resource/product5.png" alt="">
-					</div>
-					<div class="product-content">
-						<a href="#">Neutrone® NMS-NMSR</a>
-						<p>Side Entry</p>
-                        <a class="product-button" href="#">View Product</a>
-					</div>
-				</div>
-			</div>	
-			<div class="col-lg-4 grid-item pump">
-				<div class="single-product-box">
-					<div class="product-thumb">
-						<img src="assets/images/resource/product6.png" alt="">
-					</div>
-					<div class="product-content">
-						<a href="#">Neutrone® NP</a>
-						<p>Heavy Duty</p>
                         <a class="product-button" href="#">View Product</a>
 					</div>
 				</div>
