--- a/products.html
+++ b/products.html
@@ -144,24 +144,24 @@
 			<div class="col-lg-4 grid-item pump">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/resource/product1.png" alt="">
+						<img src="assets/images/resource/mixers.png" alt="">
 					</div>
 					<div class="product-content">
 						<a href="#">Neutrone® Mixers</a>
 						<p>Portable</p>
-                        <a class="product-button" href="#">View Product</a>
+                        <a class="product-button" href="#">View Products</a>
 					</div>
 				</div>
 			</div>			
 			<div class="col-lg-4 grid-item pump">
 				<div class="single-product-box">
 					<div class="product-thumb">
-						<img src="assets/images/resource/product2.png" alt="">
+						<img src="assets/images/resource/pumps.png" alt="">
 					</div>
 					<div class="product-content">
 						<a href="#">Neutrone® Pumps</a>
 						<p>Side Entry</p>
-                        <a class="product-button" href="#">View Product</a>
+                        <a class="product-button" href="#">View Products</a>
 					</div>
 				</div>
 			</div>
