--- a/contact.html
+++ b/contact.html
@@ -123,7 +123,7 @@
 <div class="contact-area">
 	<div class="container">
 		<div class="row align-items-center">
-			<div class="col-md-12 col-lg-6 pl-0 pr-0">
+			<div class="col-md-12 pl-0 pr-0">
 				<div class="contact_from_box">
 					<div class="contact_title pb-4">
 						<h3>Get a Quote</h3>
@@ -174,7 +174,7 @@
 					<div id="status"></div>
 				</div>
 			</div>
-			<div class="col-md-12 col-lg-6">
+			<div class="col-md-12">
 				<div class="content-info-area">
 					<div class="cda-single-content d-flex">
 						<div class="cda-icon">
