--- a/contact.html
+++ b/contact.html
@@ -123,6 +123,39 @@
 <div class="contact-area">
 	<div class="container">
 		<div class="row align-items-center">
+			<div class="col-md-12 mb-5">
+				<div class="content-info-area">
+					<div class="cda-single-content d-flex">
+						<div class="cda-icon">
+							<svg style="fill:white;margin-right: 25px;" xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 31 31"><path d="M1 1h7v7h-7zM11 1h1v2h-1v1h1v-1h1v2h-2v1h-2v-1h1v-2h-1v-1h2zM14 1h1v2h-2v-1h1zM16 1h1v1h1v-1h3v1h1v1h-1v4h-1v2h-1v2h-1v1h1v-1h1v2h-4v-1h1v-1h-3v1h1v1h-1v2h-1v-1h-1v-1h1v-1h-1v-1h1v-1h5v-1h-5v-4h1v1h1v-1h-1v-1h4v1h-2v1h2v2h1v-2h-1v-1h2v-1h-1v-1h-3zM23 1h7v7h-7zM2 2v5h5v-5zM24 2v5h5v-5zM3 3h3v3h-3zM25 3h3v3h-3zM11 6h1v3h-1zM9 7h1v1h-1zM14 7v1h1v-1zM16 7v1h1v-1zM21 7h1v3h-2v-1h1zM1 9h1v1h-1zM3 9h1v1h1v1h-2v1h-1v1h-1v-2h1v-1h1zM5 9h1v1h-1zM7 9h1v1h-1zM10 9h1v3h-1zM25 9h1v1h-1zM28 9h1v1h-1zM6 10h1v1h-1zM8 10h1v2h-2v-1h1zM22 10h3v4h-1v2h-1v-1h-2v-1h-1v-1h1v-1h1zM26 10h1v1h-1zM29 10h1v2h-1v1h1v3h-1v1h1v3h-1v1h-1v-2h1v-1h-1v-3h1v-1h-1v-2h-1v-1h2zM23 11v1h1v-1zM5 12h2v1h2v-1h1v1h1v5h-1v-1h-1v-1h1v-1h-1v-1h-3v1h-2v-1h-1v-1h2zM26 13h1v5h1v1h-2v-3h-1v-1h1zM1 14h2v3h1v1h-2v-1h-1zM15 14h1v2h-1zM18 14h2v3h-2v-1h1v-1h-1zM7 15h2v1h-2zM12 15h1v1h2v1h1v1h4v3h-1v1h2v-2h2v1h1v-1h-1v-2h-1v1h-1v-1h-1v-1h1v-1h1v1h2v-1h1v2h-1v1h2v1h-1v1h1v2h1v2h-1v2h1v1h-3v-2h-2v1h-1v1h1v-1h1v2h-1v1h-1v-1h-1v-3h1v-2h-1v1h-2v2h-2v-1h1v-1h-1v-1h1v-2h1v-2h1v-1h-1v1h-1v-1h-1v1h1v1h-1v1h-1v-1h-2v-1h2v-2h-1v-1h-1v1h1v1h-1v1h-1v1h-1v-2h1zM17 15h1v1h-1zM4 16h1v1h-1zM6 16h1v1h1v1h-1v1h1v1h-2v1h-1v-1h-1v-2h1v1h1v-1h-1v-1h1zM8 18h2v1h-2zM1 19h1v1h-1zM2 20h2v1h-2zM8 20h2v1h-2zM26 20h1v1h-1zM1 21h1v1h-1zM4 21h1v1h-1zM7 21h1v1h-1zM10 21h1v1h-1zM9 22h1v1h-1zM22 22v3h3v-3zM27 22h3v2h-2v-1h-1zM1 23h7v7h-7zM10 23h1v1h-1zM13 23h2v1h-2zM18 23v1h1v-1zM23 23h1v1h-1zM2 24v5h5v-5zM3 25h3v3h-3zM9 25h1v1h-1zM11 25h2v1h2v1h-1v1h-1v-1h-2zM27 26h3v2h-1v-1h-2zM9 27h1v1h-1zM15 27h1v1h-1zM12 28h1v2h-1zM18 28h1v2h-2v-1h1zM28 28h1v1h1v1h-2zM9 29h1v1h-1zM23 29h2v1h-2z"/></svg>
+						</div>
+						<div class="cda-content-inner">
+							<h4>Company Location</h4>
+							<p>No. 24, Jalan Utama 2/32, 47100 Puchong, Selangor Darul Ehsan, Malaysia Taman Perindustrian Puchong Utama</p>
+						</div>
+					</div>
+					<div class="cda-single-content hr d-flex">
+						<div class="cda-content-inner">
+							<h4>Workshop Location</h4>
+							<p>No. 3, Jalan Utam 2/17, 47100 Puchong, Selangor Darul Ehsan, Malaysia Taman Perindustrian Puchong Utama </p>
+						</div>
+					</div>
+					<div class="cda-single-content hr d-flex">
+						<div class="cda-content-inner">
+							<h4>Telephone Number</h4>
+							<p>+603-8062 5093 </p>
+						</div>
+					</div>
+					<div class="cda-single-content hr d-flex">
+						<div class="cda-content-inner">
+							<h4>Email Address</h4>
+							<p>sales@trimaxcentury.com.my</p>
+						</div>
+					</div>
+					<div class="cda-single-content hr d-flex">
+					</div>
+				</div>
+			</div>
 			<div class="col-md-12 pl-0 pr-0">
 				<div class="contact_from_box">
 					<div class="contact_title pb-4">
@@ -172,39 +205,6 @@
 						</div>
 					</form>
 					<div id="status"></div>
-				</div>
-			</div>
-			<div class="col-md-12">
-				<div class="content-info-area">
-					<div class="cda-single-content d-flex">
-						<div class="cda-icon">
-							<svg style="fill:white;margin-right: 25px;" xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 31 31"><path d="M1 1h7v7h-7zM11 1h1v2h-1v1h1v-1h1v2h-2v1h-2v-1h1v-2h-1v-1h2zM14 1h1v2h-2v-1h1zM16 1h1v1h1v-1h3v1h1v1h-1v4h-1v2h-1v2h-1v1h1v-1h1v2h-4v-1h1v-1h-3v1h1v1h-1v2h-1v-1h-1v-1h1v-1h-1v-1h1v-1h5v-1h-5v-4h1v1h1v-1h-1v-1h4v1h-2v1h2v2h1v-2h-1v-1h2v-1h-1v-1h-3zM23 1h7v7h-7zM2 2v5h5v-5zM24 2v5h5v-5zM3 3h3v3h-3zM25 3h3v3h-3zM11 6h1v3h-1zM9 7h1v1h-1zM14 7v1h1v-1zM16 7v1h1v-1zM21 7h1v3h-2v-1h1zM1 9h1v1h-1zM3 9h1v1h1v1h-2v1h-1v1h-1v-2h1v-1h1zM5 9h1v1h-1zM7 9h1v1h-1zM10 9h1v3h-1zM25 9h1v1h-1zM28 9h1v1h-1zM6 10h1v1h-1zM8 10h1v2h-2v-1h1zM22 10h3v4h-1v2h-1v-1h-2v-1h-1v-1h1v-1h1zM26 10h1v1h-1zM29 10h1v2h-1v1h1v3h-1v1h1v3h-1v1h-1v-2h1v-1h-1v-3h1v-1h-1v-2h-1v-1h2zM23 11v1h1v-1zM5 12h2v1h2v-1h1v1h1v5h-1v-1h-1v-1h1v-1h-1v-1h-3v1h-2v-1h-1v-1h2zM26 13h1v5h1v1h-2v-3h-1v-1h1zM1 14h2v3h1v1h-2v-1h-1zM15 14h1v2h-1zM18 14h2v3h-2v-1h1v-1h-1zM7 15h2v1h-2zM12 15h1v1h2v1h1v1h4v3h-1v1h2v-2h2v1h1v-1h-1v-2h-1v1h-1v-1h-1v-1h1v-1h1v1h2v-1h1v2h-1v1h2v1h-1v1h1v2h1v2h-1v2h1v1h-3v-2h-2v1h-1v1h1v-1h1v2h-1v1h-1v-1h-1v-3h1v-2h-1v1h-2v2h-2v-1h1v-1h-1v-1h1v-2h1v-2h1v-1h-1v1h-1v-1h-1v1h1v1h-1v1h-1v-1h-2v-1h2v-2h-1v-1h-1v1h1v1h-1v1h-1v1h-1v-2h1zM17 15h1v1h-1zM4 16h1v1h-1zM6 16h1v1h1v1h-1v1h1v1h-2v1h-1v-1h-1v-2h1v1h1v-1h-1v-1h1zM8 18h2v1h-2zM1 19h1v1h-1zM2 20h2v1h-2zM8 20h2v1h-2zM26 20h1v1h-1zM1 21h1v1h-1zM4 21h1v1h-1zM7 21h1v1h-1zM10 21h1v1h-1zM9 22h1v1h-1zM22 22v3h3v-3zM27 22h3v2h-2v-1h-1zM1 23h7v7h-7zM10 23h1v1h-1zM13 23h2v1h-2zM18 23v1h1v-1zM23 23h1v1h-1zM2 24v5h5v-5zM3 25h3v3h-3zM9 25h1v1h-1zM11 25h2v1h2v1h-1v1h-1v-1h-2zM27 26h3v2h-1v-1h-2zM9 27h1v1h-1zM15 27h1v1h-1zM12 28h1v2h-1zM18 28h1v2h-2v-1h1zM28 28h1v1h1v1h-2zM9 29h1v1h-1zM23 29h2v1h-2z"/></svg>
-						</div>
-						<div class="cda-content-inner">
-							<h4>Company Location</h4>
-							<p>No. 24, Jalan Utama 2/32, 47100 Puchong, Selangor Darul Ehsan, Malaysia Taman Perindustrian Puchong Utama</p>
-						</div>
-					</div>
-					<div class="cda-single-content hr d-flex">
-						<div class="cda-content-inner">
-							<h4>Workshop Location</h4>
-							<p>No. 3, Jalan Utam 2/17, 47100 Puchong, Selangor Darul Ehsan, Malaysia Taman Perindustrian Puchong Utama </p>
-						</div>
-					</div>
-					<div class="cda-single-content hr d-flex">
-						<div class="cda-content-inner">
-							<h4>Telephone Number</h4>
-							<p>+603-8062 5093 </p>
-						</div>
-					</div>
-					<div class="cda-single-content hr d-flex">
-						<div class="cda-content-inner">
-							<h4>Email Address</h4>
-							<p>sales@trimaxcentury.com.my</p>
-						</div>
-					</div>
-					<div class="cda-single-content hr d-flex">
-					</div>
 				</div>
 			</div>
 		</div>
