--- a/contact.html
+++ b/contact.html
@@ -137,20 +137,22 @@
 							</div>
 							<div class="cda-single-content hr d-flex">
 								<div class="cda-content-inner">
-									<h4>Workshop Location</h4>
-									<p>No. 3, Jalan Utam 2/17, 47100 Puchong, Selangor Darul Ehsan, Malaysia Taman Perindustrian Puchong Utama </p>
-								</div>
-							</div>
-							<div class="cda-single-content hr d-flex">
-								<div class="cda-content-inner">
 									<h4>Telephone Number</h4>
 									<p>+603-8062 5093 </p>
 								</div>
 							</div>
 							<div class="cda-single-content hr d-flex">
 								<div class="cda-content-inner">
+									<h4>Facsimile Number</h4>
+									<p>+603-8062 5092 </p>
+								</div>
+							</div>
+							<div class="cda-single-content hr d-flex">
+								<div class="cda-content-inner">
 									<h4>Email Address</h4>
+									<p>admin@trimaxcentury.com.my</p>
 									<p>sales@trimaxcentury.com.my</p>
+									<p>max_century88@yahoo.com</p>
 								</div>
 							</div>
 							<div class="cda-single-content hr d-flex">
