--- a/contact.html
+++ b/contact.html
@@ -168,6 +168,43 @@
 								</div>
 							</div>
 						</div>
+						<div class="col-md-4">
+							<div class="cda-single-content d-flex">
+								<div class="cda-content-inner">
+									<h4>Indonesia Distributor</h4>
+									<p><span class="fw-bold">PT. DEKA ADHINUSA</p>
+									<p>Jln. Raya Joglo No 27  <br/>Srengseng- Kembangan <br/>Jakarta Barat, Indonesia – 11630</p>
+								</div>
+							</div>
+							<div class="cda-single-content hr d-flex">
+								<div class="cda-content-inner">
+									<h4>Telephone Number</h4>
+									<p>+62-21-5890 7574/0653/0654 </p>
+								</div>
+							</div>
+							<div class="cda-single-content hr d-flex">
+								<div class="cda-content-inner">
+									<h4>Facsimile Number</h4>
+									<p>+62-21-5907602 </p>
+								</div>
+							</div>
+							<div class="cda-single-content hr d-flex">
+								<div class="cda-content-inner">
+									<h4>Email Address</h4>
+									<p>dk-jkt@deka-adhinusa.co.id</p>
+									<p>ptitus@deka-adhinusa.co.id</p>
+									<p>connie@deka-adhinusa.co.id</p>
+								</div>
+							</div>
+							<div class="cda-single-content hr d-flex">
+								<div class="cda-content-inner">
+									<h4>Website</h4>
+									<p>deka-adhinusa.co.id</p>
+								</div>
+							</div>
+							<div class="cda-single-content hr d-flex">
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
