--- a/contact.html
+++ b/contact.html
@@ -171,7 +171,7 @@
 						<div class="col-md-4">
 							<div class="cda-single-content d-flex">
 								<div class="cda-content-inner">
-									<h4>Indonesia Distributor</h4>
+									<h4>Distributor (Indonesia)</h4>
 									<p><span class="fw-bold">PT. DEKA ADHINUSA</p>
 									<p>Jln. Raya Joglo No 27  <br/>Srengseng- Kembangan <br/>Jakarta Barat, Indonesia – 11630</p>
 								</div>
