--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@
 			<div class="col-md-12 mb-5">
 				<div class="content-info-area">
 					<div class="row">
-						<div class="col-md-4">
+						<div class="col-lg-4">
 							<div class="cda-single-content d-flex">
 								<div class="cda-content-inner">
 									<h4>Office Address</h4>
@@ -158,7 +158,7 @@
 							<div class="cda-single-content hr d-flex">
 							</div>
 						</div>
-						<div class="col-md-4">
+						<div class="col-lg-4">
 							<div class="cda-single-content hr d-flex">
 								<div class="cda-content-inner">
 									<h4>Workshop Address</h4>
@@ -168,7 +168,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4">
+						<div class="col-lg-4">
 							<div class="cda-single-content d-flex">
 								<div class="cda-content-inner">
 									<h4>Distributor (Indonesia)</h4>
