--- a/contact.html
+++ b/contact.html
@@ -172,6 +172,7 @@
 							<div class="cda-single-content d-flex">
 								<div class="cda-content-inner">
 									<h4>Distributor (Indonesia)</h4>
+									<img src="assets/images/resource/logo-deka-1.png" />
 									<p><span class="fw-bold">PT. DEKA ADHINUSA</p>
 									<p>Jln. Raya Joglo No 27  <br/>Srengseng- Kembangan <br/>Jakarta Barat, Indonesia – 11630</p>
 								</div>
