--- a/about.html
+++ b/about.html
@@ -134,9 +134,7 @@
 				<div class="about_right">
 					<div class="about-content">
 						<div class="section-title inner">
-							<h4>ABOUT US</h4>
-							<h1>Built on a</h1>
-						    <h1>strong Foundation</h1>
+							<h1>About Us</h1>
 							<p class="section-desc">Regional organization recognized for its expertise in the design, manufacture, and customization of fluid agitation equipment and systems. With over two decades of experience, we specialize in providing innovative solutions tailored to meet the unique needs of our clients across various industries.</p>
 							<p>Established a strong presence in major industry segments, delivering customized fluid agitation solutions that meet the diverse needs of our clients globally.</p>
 						</div>
