--- a/gallery.html
+++ b/gallery.html
@@ -36,20 +36,20 @@
 <div class="top-bar-area">
 	<div class="container">
 		<div class="row align-items-center">
-			<div class="col-md-2">
+			<div class="col-md-4">
 				<div class="header-logo">
 					<a href="index.html"><img src="assets/images/logo1.png" alt="logo"></a>
 				</div>
 			</div>
-			<div class="col-md-10">
+			<div class="col-md-8">
 				<div class="top-bar-info text-end">
 					<ul class="d-inline-flex align-items-center">
 						<li>
 							<div class="d-inline-flex">
 								<i class="fs-4 bi bi-telephone-fill align-content-center me-4"></i>
-								<p class="text-light mb-0">
+								<p class="mb-0 text-light">
 									Contact Us
-									<span class="d-block">+603-8062 5093</span>
+									<span class="d-block fw-bold text-dark">+603-8062 5093</span>
 								</p>
 							</div>
 						</li>
@@ -96,7 +96,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">Corporate Information</a></li>
 				<li><a href="products.html">Products</a></li>
-				<li><a href="news.html">News & Events</a></li>
+				<li><a href="gallery.html">Gallery</a></li>
 				<li><a href="#">Careers</a></li>
 				<li><a href="contact.html">Contacts</a></li>
 			</ul>
