--- a/products.html
+++ b/products.html
@@ -74,7 +74,7 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about.html">Corporate Information</a></li>
 						<li><a href="products.html">Products</a></li>
-						<li><a href="news.html">News & Events</a></li>
+						<li><a href="gallery.html">Gallery</a></li>
 						<li><a href="#">Careers</a></li>
 						<li><a href="contact.html">Contacts</a></li>
 					</ul>
@@ -96,7 +96,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">Corporate Information</a></li>
 				<li><a href="products.html">Products</a></li>
-				<li><a href="news.html">News & Events</a></li>
+				<li><a href="gallery.html">Gallery</a></li>
 				<li><a href="#">Careers</a></li>
 				<li><a href="contact.html">Contacts</a></li>
 			</ul>
