--- a/about.html
+++ b/about.html
@@ -317,7 +317,7 @@
 	</div>		
 </div>
 
-<div class="brand-area pt-0">
+<div class="brand-area">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
