--- a/gallery.html
+++ b/gallery.html
@@ -109,10 +109,10 @@
 		<div class="row d-flex align-items-center">
 			<div class="col-lg-12">
 				<div class="breadcumb-content">
-					<h1>News</h1>
+					<h1>Gallery</h1>
 					<ul>
 						<li><i class="fas fa-house-user"></i><a href="index.html">Home</a></li>
-						<li>News</li>
+						<li>Gallery</li>
 					</ul>
 				</div>
 			</div>
