--- a/gallery.html
+++ b/gallery.html
@@ -247,7 +247,7 @@
 	</div>
 </div>
 
-<div class="brand-area">
+<div class="brand-area pt-0">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
@@ -257,43 +257,100 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="brand-list owl-carousel">
-				<div class="col-md-12">
-					<div class="single-brand-box">
-						<div class="brand-thumb">
-							<img src="assets/images/resource/logo-bp.png" alt="">
-						</div>
-					</div>
-				</div>				
-				<div class="col-md-12">
-					<div class="single-brand-box">
-						<div class="brand-thumb">
-							<img src="assets/images/resource/logo-kencana.png" alt="">
-						</div>
-					</div>
-				</div>				
-				<div class="col-md-12">
-					<div class="single-brand-box">
-						<div class="brand-thumb">
-							<img src="assets/images/resource/logo-petronas.png" alt="">
-						</div>
-					</div>
-				</div>				
-				<div class="col-md-12">
-					<div class="single-brand-box">
-						<div class="brand-thumb">
-							<img src="assets/images/resource/logo-syabas.jpg" alt="">
-						</div>
-					</div>
-				</div>				
-				<div class="col-md-12">
-					<div class="single-brand-box">
-						<div class="brand-thumb">
-							<img src="assets/images/resource/logo-ytl.png" alt="">
-						</div>
-					</div>
-				</div>
+			<div class="col-lg-12">
+				<ul class="brands">
+					<li class="brands__item">
+						<img src="assets/images/clients/air-selangor.png" alt="" />
+					</li>
+					<li class="brands__item">
+						<img src="assets/images/clients/ancom.png" alt="" />
+					</li>
+					<li class="brands__item">
+						<img src="assets/images/clients/apical-retina.png" alt="" />
+					</li>
+					<li class="brands__item">
+						<img src="assets/images/clients/bp.png" alt="" />
+					</li>
+					<li class="brands__item">
+						<img src="assets/images/clients/coca-cola.png" alt="" />
+					</li>
+					<li class="brands__item">
+						<img src="assets/images/clients/cwm.png" alt="" />
+					</li>
+					<li class="brands__item">
+						<img src="assets/images/clients/darco.png" alt="" />
+					</li>
+					<li class="brands__item">
+						<img src="assets/images/clients/desmet.png" alt="" />
+					</li>
+					<li class="brands__item">
+						<img src="assets/images/clients/fnn.png" alt="" />
+					</li>
+					<li class="brands__item">
+						<img src="assets/images/clients/ioilogo.png" alt="" />
+					</li>
+					<li class="brands__item">
+						<img src="assets/images/clients/jj-lurgi.png" alt="" />
+					</li>
+					<li class="brands__item">
+						<img src="assets/images/clients/kenso.png" alt="" />
+					</li>
+					<li class="brands__item">
+						<img src="assets/images/clients/kurita.png" alt="" />
+					</li>
+					<li class="brands__item">
+						<img src="assets/images/clients/lap.png" alt="" />
+					</li>
+					<li class="brands__item">
+						<img src="assets/images/clients/lipico.png" alt="" />
+					</li>
+					<li class="brands__item">
+						<img src="assets/images/clients/oiltek.png" alt="" />
+					</li>
+					<li class="brands__item">
+						<img src="assets/images/clients/pba.png" alt="" />
+					</li>
+					<li class="brands__item">
+						<img src="assets/images/clients/petronas.png" alt="" />
+					</li>
+					<li class="brands__item">
+						<img src="assets/images/clients/salcon.png" alt="" />
+					</li>
+					<li class="brands__item">
+						<img src="assets/images/clients/sinarmas.png" alt="" />
+					</li>
+					<li class="brands__item">
+						<img src="assets/images/clients/unilever.png" alt="" />
+					</li>
+					<li class="brands__item">
+						<img src="assets/images/clients/veolia.png" alt="" />
+					</li>
+					<li class="brands__item">
+						<img src="assets/images/clients/wet.png" alt="" />
+					</li>
+					<li class="brands__item">
+						<img src="assets/images/clients/wilmar.png" alt="" />
+					</li>
+
+				</ul>
+				<style>
+					.brands {
+						display: grid;
+						grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+						grid-gap: 2rem;
+					}
+					.brands__item {
+						margin: auto;
+						align-content: center;
+					}
+					.brands__item img {
+						width: 130px;
+						height: 75px;
+						object-fit: contain;
+					}
+				</style>
 			</div>
+		</div>
 		</div>
 	</div>
 </div>
