--- a/contact.html
+++ b/contact.html
@@ -150,8 +150,9 @@
 							<div class="cda-single-content hr d-flex">
 								<div class="cda-content-inner">
 									<h4>Email Address</h4>
-									<p>admin@trimaxcentury.com.my</p>
+									<p>sales@neutrone.com.my</p>
 									<p>sales@trimaxcentury.com.my</p>
+									<p>admin@trimaxcentury.com.my</p>
 									<p>max_century88@yahoo.com</p>
 								</div>
 							</div>
