--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
 				<div class="content-info-area">
 					<div class="row">
 						<div class="col-lg-4">
-							<div class="cda-single-content d-flex">
+							<div class="cda-single-content d-flex" style="min-height:360px">
 								<div class="cda-content-inner">
 									<h4>Office Address</h4>
 									<p style="font-family:'Times New Roman', serif;"><span class="fw-bold">TRIMAX CENTURY SDN BHD</span> <br/>(Co. Reg. No.: 200401028835 (667343-P))</p>
@@ -160,7 +160,7 @@
 							</div>
 						</div>
 						<div class="col-lg-4">
-							<div class="cda-single-content hr d-flex">
+							<div class="cda-single-content hr d-flex" style="min-height:360px">
 								<div class="cda-content-inner">
 									<h4>Workshop Address</h4>
 									<p style="font-family:'Times New Roman', serif;"><span class="fw-bold">TRIMAX CENTURY SDN BHD</span> <br/>(Co. Reg. No.: 200401028835 (667343-P))</p>
@@ -170,7 +170,7 @@
 							</div>
 						</div>
 						<div class="col-lg-4">
-							<div class="cda-single-content d-flex">
+							<div class="cda-single-content d-flex" style="min-height:360px">
 								<div class="cda-content-inner">
 									<h4>Distributor (Indonesia)</h4>
 									<img src="assets/images/resource/logo-deka-1.png" />
