--- a/index.html
+++ b/index.html
@@ -627,9 +627,12 @@
 						</div>
 					    <div class="footer-widget-contact">
 							<ul>
+								<li><a href="#">sales@neutrone.com.my</a></li>
 								<li><a href="#">sales@trimaxcentury.com.my</a></li>
+								<li><a href="#">admin@trimaxcentury.com.my</a></li>
+								<li><a href="#">max_century88@yahoo.com</a></li>
 								<li><a href="#">+603-8062 5093</a></li>
-								<li><a href="#">No. 24, Jalan Utama 2/32, 47100 Puchong, Selangor Darul Ehsan, Malaysia Taman Perindustrian Puchong Utama</a></li>
+								<li><a href="#">No. 24, Jalan Utama 2/32, <br/>Taman Perindustrian Puchong Utama, <br/>47100 Puchong, Selangor Darul Ehsan, Malaysia</a></li>
 							</ul>
 						</div>
 					</div>
