--- a/contact.html
+++ b/contact.html
@@ -345,7 +345,7 @@
 					</div>
 				</div>
 			</div>						
-			<div class="col-lg-4 col-md-6 col-sm-6">
+			<div class="col-md-6 col-sm-6">
 				<div class="single-footer-widget-box upper">
 					<div class="footer-widget-content">
 						<div class="footer-widget-title">
