--- a/contact.html
+++ b/contact.html
@@ -210,7 +210,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-12 pl-0 pr-0">
+			<div id="contact_form" class="col-md-12 pl-0 pr-0">
 				<div class="contact_from_box">
 					<div class="contact_title pb-4">
 						<h3>Get a Quote</h3>
