--- a/products.html
+++ b/products.html
@@ -76,7 +76,7 @@
 						<li><a href="products.html">Products</a></li>
 						<li><a href="gallery.html">Gallery</a></li>
 						<li><a href="#">Careers</a></li>
-						<li><a href="contact.html">Contacts</a></li>
+						<li><a href="contact.html#contact_form">Contacts</a></li>
 					</ul>
 				</div>
 			</div>
@@ -98,7 +98,7 @@
 				<li><a href="products.html">Products</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
 				<li><a href="#">Careers</a></li>
-				<li><a href="contact.html">Contacts</a></li>
+				<li><a href="contact.html#contact_form">Contacts</a></li>
 			</ul>
 		</nav>
 	</div>
