--- a/gallery.html
+++ b/gallery.html
@@ -76,13 +76,13 @@
 						<li><a href="products.html">Products</a></li>
 						<li><a href="gallery.html">Gallery</a></li>
 						<li><a href="#">Careers</a></li>
-						<li><a href="contact.html#contact_form">Contacts</a></li>
+						<li><a href="contact.html">Contacts</a></li>
 					</ul>
 				</div>
 			</div>
 			<div class="col-md-3">
 				<div class="header-button">
-					<a href="contact.html">Get a Quote</a>
+					<a href="contact.html#contact_form">Get a Quote</a>
 				</div>
 			</div>
 		</div>
@@ -98,7 +98,7 @@
 				<li><a href="products.html">Products</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
 				<li><a href="#">Careers</a></li>
-				<li><a href="contact.html#contact_form">Contacts</a></li>
+				<li><a href="contact.html">Contacts</a></li>
 			</ul>
 		</nav>
 	</div>
