--- a/contact.html
+++ b/contact.html
@@ -201,7 +201,7 @@
 							<div class="cda-single-content hr d-flex">
 								<div class="cda-content-inner">
 									<h4>Website</h4>
-									<p style="color:#0c9ed9"><a href="https://deka-adhinusa.co.id" target="_blank">deka-adhinusa.co.id</a></p>
+									<p><a style="color:#0c9ed9" href="https://deka-adhinusa.co.id" target="_blank">deka-adhinusa.co.id</a></p>
 								</div>
 							</div>
 							<div class="cda-single-content hr d-flex">
