--- a/products.html
+++ b/products.html
@@ -19,7 +19,6 @@
 	<link rel="stylesheet" href="assets/css/theme-default.css" type="text/css" media="all">
 	<link rel="stylesheet" href="assets/css/meanmenu.min.css" type="text/css" media="all">
 	<link rel="stylesheet" href="assets/css/owl.transitions.css" type="text/css" media="all">
-	<link rel="stylesheet" href="venobox/venobox.css" type="text/css" media="all">
 	<link rel="stylesheet" href="assets/css/bootstrap-icons.css" type="text/css" media="all">
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" media="all">
 	<link rel="stylesheet" href="assets/css/responsive.css" type="text/css" media="all">	
@@ -147,9 +146,9 @@
 						<img src="assets/images/resource/mixers.png" alt="">
 					</div>
 					<div class="product-content">
-						<a href="#">Neutrone® Mixers</a>
+						<a href="mixers.html">Neutrone® Mixers</a>
 						<p>Portable</p>
-                        <a class="product-button" href="#">View Products</a>
+                        <a class="product-button" href="mixers.html">View Products</a>
 					</div>
 				</div>
 			</div>			
@@ -162,60 +161,6 @@
 						<a href="#">Neutrone® Pumps</a>
 						<p>Side Entry</p>
                         <a class="product-button" href="#">View Products</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-<!--==================================================-->
-<!-- End Portfolio Area -->
-<!--==================================================-->
-
-<div class="brand-area">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="section-title text-center">
-					<h1 class="mb-5">Our Clients</h1>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="brand-list owl-carousel">
-				<div class="col-md-12">
-					<div class="single-brand-box">
-						<div class="brand-thumb">
-							<img src="assets/images/resource/logo-bp.png" alt="">
-						</div>
-					</div>
-				</div>				
-				<div class="col-md-12">
-					<div class="single-brand-box">
-						<div class="brand-thumb">
-							<img src="assets/images/resource/logo-kencana.png" alt="">
-						</div>
-					</div>
-				</div>				
-				<div class="col-md-12">
-					<div class="single-brand-box">
-						<div class="brand-thumb">
-							<img src="assets/images/resource/logo-petronas.png" alt="">
-						</div>
-					</div>
-				</div>				
-				<div class="col-md-12">
-					<div class="single-brand-box">
-						<div class="brand-thumb">
-							<img src="assets/images/resource/logo-syabas.jpg" alt="">
-						</div>
-					</div>
-				</div>				
-				<div class="col-md-12">
-					<div class="single-brand-box">
-						<div class="brand-thumb">
-							<img src="assets/images/resource/logo-ytl.png" alt="">
-						</div>
 					</div>
 				</div>
 			</div>
@@ -364,13 +309,9 @@
 	<script src="assets/js/wow.js"></script>
 	<!-- imagesloaded js -->
 	<script src="assets/js/imagesloaded.pkgd.min.js"></script>
-	<!-- venobox js -->
-	<script src="venobox/venobox.js"></script>
 
 	<!--  animated-text js -->
 	<script src="assets/js/animated-text.js"></script>
-	<!-- venobox min js -->
-	<script src="venobox/venobox.min.js"></script>
 	<!-- isotope js -->
 	<script src="assets/js/isotope.pkgd.min.js"></script>
 	<!-- jquery meanmenu js -->
