--- a/products.html
+++ b/products.html
@@ -145,7 +145,7 @@
 					<div class="product-thumb">
 						<img src="assets/images/resource/mixers.png" alt="">
 					</div>
-					<div class="product-content">
+					<div class="products-content">
 						<a href="mixers.html">Neutrone® Mixers</a>
 						<p>Portable</p>
                         <a class="product-button" href="mixers.html">View Products</a>
@@ -157,7 +157,7 @@
 					<div class="product-thumb">
 						<img src="assets/images/resource/pumps.png" alt="">
 					</div>
-					<div class="product-content">
+					<div class="products-content">
 						<a href="#">Neutrone® Pumps</a>
 						<p>Side Entry</p>
                         <a class="product-button" href="#">View Products</a>
