--- a/index.html
+++ b/index.html
@@ -483,6 +483,12 @@
 
 <div id="footer"></div>
 
+<div class="prgoress_indicator active-progress">
+    <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
+      <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" style="transition: stroke-dashoffset 10ms linear 0s; stroke-dasharray: 307.919, 307.919; stroke-dashoffset: 270.456;"></path>
+    </svg>
+</div>
+
 	<script src="assets/js/vendor/jquery-3.6.2.min.js"></script>
 	<script src="assets/js/popper.min.js"></script>
 	<script src="assets/js/bootstrap.min.js"></script>
