--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Trimax Century Sdn Bhd</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<base href="https://hafizadtghazali.github.io/jubilant-engine/">
 	<link rel="icon" type="image/png" sizes="56x56" href="assets/images/fav-icon/icon.png">
 
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css" media="all">
