--- a/footer.html
+++ b/footer.html
@@ -57,7 +57,7 @@
 						<div class="footer-widget-menu">
 							<ul>
 								<li><a href="about.html">About Us</a></li>
-								<li><a href="service.html">Products</a></li>
+								<li><a href="products.html">Products</a></li>
 								<li><a href="careers.html">Careers</a></li>
 								<li><a href="contact.html">Contact</a></li>
 							</ul>
