--- a/about.html
+++ b/about.html
@@ -31,76 +31,7 @@
 <body>
 
 
-<div class="top-bar-area">
-	<div class="container">
-		<div class="row align-items-center">
-			<div class="col-md-4">
-				<div class="header-logo">
-					<a href="index.html"><img src="assets/images/logo1.png" alt="logo"></a>
-				</div>
-			</div>
-			<div class="col-md-8">
-				<div class="top-bar-info text-end">
-					<ul class="d-inline-flex align-items-center">
-						<li>
-							<div class="d-inline-flex">
-								<i class="fs-4 bi bi-telephone-fill align-content-center me-4"></i>
-								<p class="mb-0 text-light">
-									Contact Us
-									<span class="d-block fw-bold text-dark">+603-8062 5093</span>
-								</p>
-							</div>
-						</li>
-						<li>
-							<div class="header-search-button search-box-outer">
-								<a href="#"><i class="bi bi-search"></i></a>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-
-<div class="header-area" id="sticky-header">
-	<div class="container">
-		<div class="row align-items-center">
-			<div class="col-md-9">
-				<div class="header-menu">
-					<ul class="nav_scroll">
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">Corporate Information</a></li>
-						<li><a href="products.html">Products</a></li>
-						<li><a href="gallery.html">Gallery</a></li>
-						<li><a href="#">Careers</a></li>
-						<li><a href="contact.html">Contacts</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="header-button">
-					<a href="contact.html#contact_form">Get a Quote</a>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-
-<div class="mobile-menu-area sticky d-sm-block d-md-block d-lg-none ">
-	<div class="mobile-menu">
-		<nav class="header-menu">
-			<ul class="nav_scroll">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">Corporate Information</a></li>
-				<li><a href="products.html">Products</a></li>
-				<li><a href="gallery.html">Gallery</a></li>
-				<li><a href="#">Careers</a></li>
-				<li><a href="contact.html">Contacts</a></li>
-			</ul>
-		</nav>
-	</div>
-</div>
+<div id="header"></div>
 
 <div class="breadcumb-area d-flex align-items-center">
 	<div class="container">
@@ -423,127 +354,7 @@
 	</div>
 </div>
 
-
-
-<div class="footer-area">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="newslatter-area">
-					<div class="row align-items-center">
-						<div class="col-lg-2 col-md-6 col-sm-6">
-							<div class="logo">
-								<a href="index.html"><img src="assets/images/logo2.png" alt="logo"></a>
-							</div>
-						</div>
-						<div class="col-lg-5 col-md-6 col-sm-6">
-							<div class="newslatte-contant">
-								<h4>Subscribe Our Newsletter</h4>
-								<h4>For Latest Updates</h4>
-							</div>
-						</div>
-						<div class="col-lg-5 col-md-12 col-sm-12">
-							<form action="#">
-								<div class="newslatter-input-box">
-									<input type="text" name="Email" placeholder="Email Address" required>
-									<div class="newslatter-button">
-										<button type="submit">Subscribe</button>
-									</div>
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="row add-boder">
-			<div class="col-lg-4 col-md-6 col-sm-6">
-				<div class="single-footer-widget-box">
-					<div class="footer-widget-content">
-						<div class="footer-widget-title">
-							<h4>Trimax Century Sdn Bhd</h4>
-						</div>
-						<div class="footer-widget-desc">
-							<p>Regional organization recognized for its expertise in the design, manufacture, and customization of fluid agitation equipment and systems.</p>
-						</div>
-						<div class="footer-social-icon">
-							<ul>
-								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-								<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>			
-			<div class="col-lg-2 col-md-6 col-sm-6">
-				<div class="single-footer-widget-box">
-					<div class="footer-widget-content">
-						<div class="footer-widget-title">
-							<h4>Useful Links</h4>
-						</div>
-						<div class="footer-widget-menu">
-							<ul>
-								<li><a href="about.html">About Us</a></li>
-								<li><a href="products.html">Products</a></li>
-								<li><a href="careers.html">Careers</a></li>
-								<li><a href="contact.html">Contact</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>						
-			<div class="col-md-6 col-sm-6">
-				<div class="single-footer-widget-box upper">
-					<div class="footer-widget-content">
-						<div class="footer-widget-title">
-							<h4>Contact us</h4>
-						</div>
-					    <div class="footer-widget-contact">
-							<ul>
-								<li><a href="#">sales@neutrone.com.my</a></li>
-								<li><a href="#">sales@trimaxcentury.com.my</a></li>
-								<li><a href="#">admin@trimaxcentury.com.my</a></li>
-								<li><a href="#">max_century88@yahoo.com</a></li>
-								<li><a href="#">+603-8062 5093</a></li>
-								<li><a href="#">No. 24, Jalan Utama 2/32, <br/>Taman Perindustrian Puchong Utama, <br/>47100 Puchong, Selangor Darul Ehsan, Malaysia</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!--footer-bottom-->
-		<div class="footer-bottom">
-			<div class="row align-items-center">
-				<div class="col-md-6">
-					<div class="footer-bottom-content">
-				    	<p>Copyright © Trimax Century all rights reserved.</p>
-					</div>
-			    </div>	
-			    <div class="col-md-6">
-			    	<div class="footer-list-item">
-			    		<ul>
-			    			<li><a href="index.html">Home</a></li>
-			    			<li><a href="#">Privacy Notice</a></li>
-			    		</ul>
-			    	</div>
-			    </div>		
-			</div>
-		</div>
-	</div>
-</div>
-
-<div class="search-popup">
-	<button class="close-search style-two"><span class="flaticon-multiply"><i class="far fa-times-circle"></i></span></button>
-	<form method="post" action="#">
-		<div class="form-group">
-			<input type="search" name="search-field" value="" placeholder="Search Here" required="">
-			<button type="submit"><i class="fa fa-search"></i></button>
-		</div>
-	</form>
-</div>
-
-
+<div id="footer"></div>
 
    <div class="prgoress_indicator active-progress">
         <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
@@ -566,6 +377,13 @@
 	<script src="assets/js/theme.js"></script>
 	<script src="assets/js/jquery.barfiller.js"></script>
 	<script src="assets/js/scrollCue.min.js"></script>
+
+	<script> 
+	$(function(){
+		$("#header").load("header.html"); 
+		$("#footer").load("footer.html"); 
+	});
+	</script> 
 
 </body>
 
