--- a/products.html
+++ b/products.html
@@ -112,34 +112,28 @@
 
 	<script src="assets/js/vendor/jquery-3.6.2.min.js"></script>
 	<script src="assets/js/popper.min.js"></script>
-	<!-- bootstrap js -->
 	<script src="assets/js/bootstrap.min.js"></script>
-	<!-- carousel js -->
 	<script src="assets/js/owl.carousel.min.js"></script>
-	<!-- counterup js -->
 	<script src="assets/js/jquery.counterup.min.js"></script>
-	<!-- waypoints js -->
 	<script src="assets/js/waypoints.min.js"></script>
-	<!-- wow js -->
 	<script src="assets/js/wow.js"></script>
-	<!-- imagesloaded js -->
 	<script src="assets/js/imagesloaded.pkgd.min.js"></script>
-
-	<!--  animated-text js -->
 	<script src="assets/js/animated-text.js"></script>
-	<!-- isotope js -->
 	<script src="assets/js/isotope.pkgd.min.js"></script>
-	<!-- jquery meanmenu js -->
 	<script src="assets/js/jquery.meanmenu.js"></script>
-
-	<!-- jquery scrollup js -->
 	<script src="assets/js/jquery.scrollUp.js"></script>
-	<!-- theme js -->
 	<script src="assets/js/theme.js"></script>
-	<!-- barfiller -->
 	<script src="assets/js/jquery.barfiller.js"></script>
-	<!-- barfiller -->
 	<script src="assets/js/scrollCue.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/js/swiper.min.js"></script>
+
+	<script> 
+	$(function(){
+		$("#header").load("header.html"); 
+		$("#footer").load("footer.html"); 
+	});
+	</script> 
+	
 
 </body>
 
