--- a/products.html
+++ b/products.html
@@ -89,9 +89,9 @@
 						<img src="assets/images/resource/pumps.png" alt="">
 					</div>
 					<div class="products-content">
-						<a href="#">Neutrone® Pumps</a>
+						<a href="pumps.html">Neutrone® Pumps</a>
 						<p>Side Entry</p>
-                        <a class="product-button" href="#">View Products</a>
+                        <a class="product-button" href="pumps.html">View Products</a>
 					</div>
 				</div>
 			</div>
