--- a/contact.html
+++ b/contact.html
@@ -210,6 +210,16 @@
 
 <div id="footer"></div>
 
+<div class="search-popup">
+	<button class="close-search style-two"><span class="flaticon-multiply"><i class="far fa-times-circle"></i></span></button>
+	<form method="post" action="#">
+		<div class="form-group">
+			<input type="search" name="search-field" value="" placeholder="Search Here" required="">
+			<button type="submit"><i class="fa fa-search"></i></button>
+		</div>
+	</form>
+</div>
+
 
 
    <div class="prgoress_indicator active-progress">
